upload dir to s3 as website

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,7 @@
 mypkgs = s3web
 
 [buildout]
-develop = .
+develop = . ../boto
 parts = py scripts
 
 # interactive python enterpreter
@@ -14,4 +14,4 @@ eggs = ${config:mypkgs}
 [scripts]
 recipe = zc.recipe.egg:scripts
 eggs = s3web
-arguments = ${buildout:config_file}
+#arguments = ${buildout:config_file}
